--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -877,14 +877,14 @@ etcd_ca_default_days=1825
 
 # host group for masters
 [masters]
-10.9.175.57 openshift_public_hostname=10.9.175.57
-10.9.188.249 openshift_public_hostname=10.9.188.249 
-10.9.145.159 openshift_public_hostname=10.9.145.159
+10.9.175.57 openshift_public_hostname=master1.openshift-bjb.lifesense.com
+10.9.188.249 openshift_public_hostname=master2.openshift-bjb.lifesense.com
+10.9.145.159 openshift_public_hostname=master3.openshift-bjb.lifesense.com
 
 [etcd]
-10.9.175.57 openshift_public_hostname=10.9.175.57
-10.9.188.249 openshift_public_hostname=10.9.188.249 
-10.9.145.159 openshift_public_hostname=10.9.145.159
+10.9.175.57 openshift_public_hostname=etcd1.openshift-bjb.lifesense.com
+10.9.188.249 openshift_public_hostname=etcd1.openshift-bjb.lifesense.com
+10.9.145.159 openshift_public_hostname=etcd1.openshift-bjb.lifesense.com
 
 # NOTE: Containerized load balancer hosts are not yet supported, if using a global
 # containerized=true host variable we must set to false.
@@ -893,8 +893,8 @@ etcd_ca_default_days=1825
 # However, in order to ensure that your masters are not burdened with running pods you should
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
-10.9.175.57 openshift_public_hostname=10.9.175.57
-10.9.188.249 openshift_public_hostname=10.9.188.249 
-10.9.145.159 openshift_public_hostname=10.9.145.159
-10.9.124.19 openshift_public_hostname=10.9.124.19 openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+10.9.175.57 openshift_public_hostname=master1.openshift-bjb.lifesense.com
+10.9.188.249 openshift_public_hostname=master2.openshift-bjb.lifesense.com
+10.9.145.159 openshift_public_hostname=master3.openshift-bjb.lifesense.com
+10.9.124.19 openshift_public_hostname=node1.openshift-bjb.lifesense.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
 
