--- a/ansible.cfg
+++ b/ansible.cfg
@@ -16,7 +16,7 @@ host_key_checking = False
 retry_files_enabled = False
 retry_files_save_path = ~/ansible-installer-retries
 nocows = True
-remote_user = lifesense
+remote_user = root
 roles_path = roles/
 gathering = smart
 fact_caching = jsonfile
