--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -8,7 +8,8 @@ etcd
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
-openshift_disable_check=disk_availability
+openshift_disable_check=disk_availability,memory_availability
+openshift.common.is_containerized=true
 
 # Enable unsupported configurations, things that will yield a partially
 # functioning cluster but would not be supported for production use
