openshift_docker_use_system_container=true

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -111,7 +111,7 @@ openshift_release=v3.6
 # - docker_upgrade
 # The following options must not be used
 # - openshift_docker_options
-#openshift_docker_use_system_container=False
+openshift_docker_use_system_container=true
 # Instead of using docker, replacec it with cri-o
 # NOTE: This uses openshift_docker_systemcontainer_image_registry_override as it's override
 # just as container-engine does.
