--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -59,10 +59,10 @@ openshift_release=v3.6
 #openshift_use_etcd_system_container=False
 #
 # In either case, system_images_registry must be specified to be able to find the system images
-#system_images_registry="docker.io"
+system_images_registry="docker.io"
 
 # Install the openshift examples
-#openshift_install_examples=true
+openshift_install_examples=true
 
 # Configure logoutURL in the master config for console customization
 # See: https://docs.openshift.org/latest/install_config/web_console_customization.html#changing-the-logout-url
@@ -103,7 +103,7 @@ openshift_release=v3.6
 #openshift_docker_insecure_registries=registry.example.com
 #openshift_docker_blocked_registries=registry.hacker.com
 # Disable pushing to dockerhub
-#openshift_docker_disable_push_dockerhub=True
+openshift_docker_disable_push_dockerhub=True
 # Use Docker inside a System Container. Note that this is a tech preview and should
 # not be used to upgrade!
 # The following options for docker are ignored:
@@ -111,11 +111,11 @@ openshift_release=v3.6
 # - docker_upgrade
 # The following options must not be used
 # - openshift_docker_options
-#openshift_docker_use_system_container=False
+openshift_docker_use_system_container=False
 # Instead of using docker, replacec it with cri-o
 # NOTE: This uses openshift_docker_systemcontainer_image_registry_override as it's override
 # just as container-engine does.
-#openshift_use_crio=False
+openshift_use_crio=False
 # Force the registry to use for the docker/crio system container. By default the registry
 # will be built off of the deployment type and ansible_distribution. Only
 # use this option if you are sure you know what you are doing!
@@ -123,7 +123,7 @@ openshift_release=v3.6
 #openshift_crio_systemcontainer_image_override="registry.example.com/cri-o:latest"
 # Items added, as is, to end of /etc/sysconfig/docker OPTIONS
 # Default value: "--log-driver=journald"
-#openshift_docker_options="-l warn --ipv6=false"
+openshift_docker_options="-l warn --ipv6=false --log-driver=journald --registry-mirror=http://b377ad59.m.daocloud.io -s overlay2"
 
 # Specify exact version of Docker to configure or upgrade to.
 # Downgrades are not supported and will error out. Be careful when upgrading docker from < 1.10 to > 1.10.
