--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -894,7 +894,7 @@ etcd_ca_default_days=1825
 # However, in order to ensure that your masters are not burdened with running pods you should
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
-10.9.175.57 openshift_node_kubelet_args="{'hostname-override':'10.9.175.57'}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.188.249 openshift_node_kubelet_args="{'hostname-override':'10.9.188.249'}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.145.159 openshift_node_kubelet_args="{'hostname-override':'10.9.145.159'}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.124.19 openshift_node_kubelet_args="{'hostname-override':'10.9.124.19'}" openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+10.9.175.57 openshift_node_kubelet_args="{'hostname-override':['10.9.175.57']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.188.249 openshift_node_kubelet_args="{'hostname-override':['10.9.188.249']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.145.159 openshift_node_kubelet_args="{'hostname-override':['10.9.145.159']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.124.19 openshift_node_kubelet_args="{'hostname-override':['10.9.124.19']}" openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
