--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -878,14 +878,10 @@ etcd_ca_default_days=1825
 
 # host group for masters
 [masters]
-10.9.175.57
-10.9.188.249
-10.9.145.159
+master[1:3].openshift-bjb.lifesense.com
 
 [etcd]
-10.9.175.57 
-10.9.188.249
-10.9.145.159
+etcd[1:3].openshift-bjb.lifesense.com
 
 # NOTE: Containerized load balancer hosts are not yet supported, if using a global
 # containerized=true host variable we must set to false.
@@ -894,7 +890,5 @@ etcd_ca_default_days=1825
 # However, in order to ensure that your masters are not burdened with running pods you should
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
-10.9.175.57 openshift_node_kubelet_args="{'hostname-override':['10.9.175.57']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.188.249 openshift_node_kubelet_args="{'hostname-override':['10.9.188.249']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.145.159 openshift_node_kubelet_args="{'hostname-override':['10.9.145.159']}" openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.124.19 openshift_node_kubelet_args="{'hostname-override':['10.9.124.19']}" openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+master[1:3].openshift-bjb.lifesense.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+node[1:2].openshift-bjb.lifesense.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
