--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -891,4 +891,4 @@ etcd[1:3].openshift-bjb.lifesense.com
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
 master[1:3].openshift-bjb.lifesense.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-node[1:2].openshift-bjb.lifesense.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+node1.openshift-bjb.lifesense.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
