--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -878,10 +878,14 @@ etcd_ca_default_days=1825
 
 # host group for masters
 [masters]
-master[1:3].openshift-bjb.lifesense.com
+10.9.175.57
+10.9.188.249
+10.9.145.159
 
 [etcd]
-etcd[1:3].openshift-bjb.lifesense.com
+10.9.175.57
+10.9.188.249
+10.9.145.159
 
 # NOTE: Containerized load balancer hosts are not yet supported, if using a global
 # containerized=true host variable we must set to false.
@@ -890,5 +894,7 @@ etcd[1:3].openshift-bjb.lifesense.com
 # However, in order to ensure that your masters are not burdened with running pods you should
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
-master[1:3].openshift-bjb.lifesense.com openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-node1.openshift-bjb.lifesense.com openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
+10.9.175.57 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.188.249 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.145.159 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.124.19 openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
