--- a/roles/openshift_version/tasks/main.yml
+++ b/roles/openshift_version/tasks/main.yml
@@ -6,7 +6,7 @@
     dest: /etc/hosts
     block: |-
       {% for item in (groups['nodes']|default([]))|unique -%}
-      {{ hostvars[item]['access_ip'] | default(hostvars[item]['ip'] | default(hostvars[item]['ansible_default_ipv4']['address'])) }} {% if (item != hostvars[item]['ansible_env']['HOSTNAME']) %} {{ hostvars[item]['ansible_env']['HOSTNAME'] }}{% endif %}
+      {{ hostvars[item]['access_ip'] | default(hostvars[item]['ip'] | default(hostvars[item]['ansible_default_ipv4']['address'])) }} {% if (item != hostvars[item]['ansible_nodename']) %} {{ hostvars[item]['ansible_nodename'] }}{% endif %}
       {% endfor %}
     state: present
     create: yes
