去掉一些组件

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -311,7 +311,7 @@ openshift_master_cluster_public_hostname=openshift-bjb-public.lifesense.com
 #osm_api_server_args={'max-requests-inflight': ['400']}
 
 # default subdomain to use for exposed routes
-openshift_master_default_subdomain=apps.openshift-bjb.lifesense.com
+openshift_master_default_subdomain=apps.openshift-bjb-public.lifesense.com
 
 # additional cors origins
 #osm_custom_cors_origins=['foo.example.com', 'bar.example.com']
@@ -374,7 +374,7 @@ osm_default_node_selector='region=primary'
 #openshift_hosted_router_certificate={"certfile": "/path/to/router.crt", "keyfile": "/path/to/router.key", "cafile": "/path/to/router-ca.crt"}
 #
 # Manage the OpenShift Router
-#openshift_hosted_manage_router=true
+openshift_hosted_manage_router=false
 #
 # Router sharding support has been added and can be achieved by supplying the correct
 # data to the inventory.  The variable to house the data is openshift_hosted_routers
@@ -416,7 +416,7 @@ osm_default_node_selector='region=primary'
 #openshift_hosted_registry_cert_expire_days=730
 #
 # Manage the OpenShift Registry
-#openshift_hosted_manage_registry=true
+openshift_hosted_manage_registry=false
 
 # Registry Storage Options
 #
