openshift_docker_selinux_enabled=False

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -132,7 +132,7 @@ openshift_docker_options="-l warn --ipv6=false --log-driver=journald --registry-
 # Specify whether to run Docker daemon with SELinux enabled in containers. Default is True.
 # Uncomment below to disable; for example if your kernel does not support the
 # Docker overlay/overlay2 storage drivers with SELinux enabled.
-#openshift_docker_selinux_enabled=False
+openshift_docker_selinux_enabled=False
 
 # Skip upgrading Docker during an OpenShift upgrade, leaves the current Docker version alone.
 # docker_upgrade=False
