openshift_use_system_containers=true

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -48,7 +48,7 @@ openshift_release=v3.7
 #openshift_pkg_version=-3.7.0
 
 # This enables all the system containers except for docker:
-#openshift_use_system_containers=False
+openshift_use_system_containers=true
 #
 # But you can choose separately each component that must be a
 # system container:
