openshift_repos_enable_testing=true

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -48,7 +48,7 @@ openshift_release=v3.7
 #openshift_pkg_version=-3.7.0
 
 # This enables all the system containers except for docker:
-openshift_use_system_containers=true
+#openshift_use_system_containers=False
 #
 # But you can choose separately each component that must be a
 # system container:
@@ -174,7 +174,7 @@ openshift_docker_selinux_enabled=False
 
 # OpenShift repository configuration
 #openshift_additional_repos=[{'id': 'openshift-origin-copr', 'name': 'OpenShift Origin COPR', 'baseurl': 'https://copr-be.cloud.fedoraproject.org/results/maxamillion/origin-next/epel-7-$basearch/', 'enabled': 1, 'gpgcheck': 1, 'gpgkey': 'https://copr-be.cloud.fedoraproject.org/results/maxamillion/origin-next/pubkey.gpg'}]
-#openshift_repos_enable_testing=false
+openshift_repos_enable_testing=true
 
 # htpasswd auth
 openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
@@ -894,8 +894,8 @@ etcd_ca_default_days=1825
 # However, in order to ensure that your masters are not burdened with running pods you should
 # make them unschedulable by adding openshift_schedulable=False any node that's also a master.
 [nodes]
-10.9.127.191 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.159.233 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
-10.9.108.244 openshift_node_labels="{'region': 'infra', 'zone': 'default'}" openshift_schedulable=true
+10.9.127.191 openshift_node_labels="{'region': 'primary', 'zone': 'default'}" openshift_schedulable=true
+10.9.159.233 openshift_node_labels="{'region': 'primary', 'zone': 'default'}" openshift_schedulable=true
+10.9.108.244 openshift_node_labels="{'region': 'primary', 'zone': 'default'}" openshift_schedulable=true
 
 10.9.136.139 openshift_node_labels="{'region': 'primary', 'zone': 'default'}"
