--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -48,14 +48,14 @@ openshift_release=v3.7
 #openshift_pkg_version=-3.7.0
 
 # This enables all the system containers except for docker:
-#openshift_use_system_containers=False
+openshift_use_system_containers=true
 #
 # But you can choose separately each component that must be a
 # system container:
 #
 #openshift_use_openvswitch_system_container=False
-#openshift_use_node_system_container=False
-#openshift_use_master_system_container=False
+openshift_use_node_system_container=true
+openshift_use_master_system_container=true
 #openshift_use_etcd_system_container=False
 #
 # In either case, system_images_registry must be specified to be able to find the system images
