--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -48,21 +48,21 @@ openshift_release=v3.7
 #openshift_pkg_version=-3.7.0
 
 # This enables all the system containers except for docker:
-openshift_use_system_containers=true
+#openshift_use_system_containers=False
 #
 # But you can choose separately each component that must be a
 # system container:
 #
 #openshift_use_openvswitch_system_container=False
-openshift_use_node_system_container=true
-openshift_use_master_system_container=true
+#openshift_use_node_system_container=False
+#openshift_use_master_system_container=False
 #openshift_use_etcd_system_container=False
 #
 # In either case, system_images_registry must be specified to be able to find the system images
-system_images_registry="docker.io"
+#system_images_registry="docker.io"
 
 # Install the openshift examples
-openshift_install_examples=true
+#openshift_install_examples=true
 
 # Configure logoutURL in the master config for console customization
 # See: https://docs.openshift.org/latest/install_config/web_console_customization.html#changing-the-logout-url
