自定义证书

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -676,10 +676,11 @@ openshift_master_console_port=8443
 #
 # If you would like openshift_master_named_certificates to be overwritten with
 # the provided value, specify openshift_master_overwrite_named_certificates.
-#openshift_master_overwrite_named_certificates=true
+openshift_master_overwrite_named_certificates=true
 #
 # Provide local certificate paths which will be deployed to masters
 #openshift_master_named_certificates=[{"certfile": "/path/to/custom1.crt", "keyfile": "/path/to/custom1.key", "cafile": "/path/to/custom-ca1.crt"}]
+openshift_master_named_certificates=[{"certfile": "/etc/origin/master/named_certificates/_.lifesense.com.crt", "keyfile": "/etc/origin/master/named_certificates/_.lifesense.com.key"}]
 #
 # Detected names may be overridden by specifying the "names" key
 #openshift_master_named_certificates=[{"certfile": "/path/to/custom1.crt", "keyfile": "/path/to/custom1.key", "names": ["public-master-host.com"], "cafile": "/path/to/custom-ca1.crt"}]
@@ -791,7 +792,7 @@ openshift_master_session_max_seconds=3600
 
 # Enable template service broker by specifying one of more namespaces whose
 # templates will be served by the broker
-#openshift_template_service_broker_namespaces=['openshift']
+openshift_template_service_broker_namespaces=['openshift']
 
 # masterConfig.volumeConfig.dynamicProvisioningEnabled, configurable as of 1.2/3.2, enabled by default
 #openshift_master_dynamic_provisioning_enabled=False
