自定义证书

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -680,7 +680,7 @@ openshift_master_overwrite_named_certificates=true
 #
 # Provide local certificate paths which will be deployed to masters
 #openshift_master_named_certificates=[{"certfile": "/path/to/custom1.crt", "keyfile": "/path/to/custom1.key", "cafile": "/path/to/custom-ca1.crt"}]
-openshift_master_named_certificates=[{"certfile": "/etc/origin/master/named_certificates/_.lifesense.com.crt", "keyfile": "/etc/origin/master/named_certificates/_.lifesense.com.key"}]
+openshift_master_named_certificates=[{"certfile": "/etc/origin/master/_.lifesense.com.crt", "keyfile": "/etc/origin/master/_.lifesense.com.key"}]
 #
 # Detected names may be overridden by specifying the "names" key
 #openshift_master_named_certificates=[{"certfile": "/path/to/custom1.crt", "keyfile": "/path/to/custom1.key", "names": ["public-master-host.com"], "cafile": "/path/to/custom-ca1.crt"}]
