openshift_logging_elasticsearch_pvc_dynamic=true

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -553,6 +553,7 @@ openshift_logging_install_logging=true
 openshift_logging_use_ops=true
 openshift_logging_elasticsearch_pvc_size=40G
 openshift_logging_elasticsearch_pvc_storage_class_name=ceph
+openshift_logging_elasticsearch_pvc_dynamic=true
 
 
 #
