--- a/roles/openshift_logging_elasticsearch/defaults/main.yml
+++ b/roles/openshift_logging_elasticsearch/defaults/main.yml
@@ -30,7 +30,7 @@ openshift_logging_elasticsearch_pvc_name: ""
 
 # required if the PVC does not already exist
 openshift_logging_elasticsearch_pvc_size: ""
-openshift_logging_elasticsearch_pvc_dynamic: false
+openshift_logging_elasticsearch_pvc_dynamic: true
 openshift_logging_elasticsearch_pvc_pv_selector: {}
 openshift_logging_elasticsearch_pvc_access_modes: ['ReadWriteOnce']
 openshift_logging_elasticsearch_storage_group: '65534'
