--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -289,6 +289,12 @@ openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 
 openshift_master_cluster_method=native
 openshift_master_cluster_hostname=openshift-bjb.lifesense.com
 openshift_master_cluster_public_hostname=openshift-bjb-public.lifesense.com
+openshift_logging_kibana_cert="/etc/origin/master/_.lifesense.com.crt"
+openshift_logging_kibana_key="/etc/origin/master/_.lifesense.com.key"
+openshift_logging_kibana_ops_cert="/etc/origin/master/_.lifesense.com.crt"
+openshift_logging_kibana_ops_key="/etc/origin/master/_.lifesense.com.key"
+openshift_logging_master_public_url="https://openshift-bjb-public.lifesense.com:8443"
+
 
 # Pacemaker high availability cluster method.
 # Pacemaker HA environment must be able to self provision the
@@ -554,6 +560,7 @@ openshift_logging_use_ops=true
 openshift_logging_elasticsearch_pvc_size=40G
 openshift_logging_elasticsearch_pvc_storage_class_name=ceph
 openshift_logging_elasticsearch_pvc_dynamic=true
+
 
 
 #
