日志自定义证书

--- a/inventory/byo/hosts.origin.cfg
+++ b/inventory/byo/hosts.origin.cfg
@@ -294,7 +294,8 @@ openshift_logging_kibana_key="/etc/origin/master/_.lifesense.com.key"
 openshift_logging_kibana_ops_cert="/etc/origin/master/_.lifesense.com.crt"
 openshift_logging_kibana_ops_key="/etc/origin/master/_.lifesense.com.key"
 openshift_logging_master_public_url="https://openshift-bjb-public.lifesense.com:8443"
-
+openshift_logging_kibana_hostname=kibana-openshift.lifesense.com
+openshift_logging_kibana_ops_hostname=kibana-ops-openshift.lifesense.com
 
 # Pacemaker high availability cluster method.
 # Pacemaker HA environment must be able to self provision the
