--- a/inventory/byo/hosts.cfg
+++ b/inventory/byo/hosts.cfg
@@ -8,6 +8,8 @@ etcd
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
+openshift_disable_check=disk_availability,memory_availability,docker_image_availability
+
 # Enable unsupported configurations, things that will yield a partially
 # functioning cluster but would not be supported for production use
 #openshift_enable_unsupported_configurations=false
@@ -109,7 +111,7 @@ openshift_docker_use_system_container=true
 
 # Specify exact version of Docker to configure or upgrade to.
 # Downgrades are not supported and will error out. Be careful when upgrading docker from < 1.10 to > 1.10.
-docker_version="1.12.1"
+#docker_version="1.12.1"
 
 # Specify whether to run Docker daemon with SELinux enabled in containers. Default is True.
 # Uncomment below to disable; for example if your kernel does not support the
