自定义配置

--- a/inventory/byo/hosts.cfg
+++ b/inventory/byo/hosts.cfg
@@ -100,7 +100,7 @@ openshift_release=v3.6
 # - docker_upgrade
 # The following options must not be used
 # - openshift_docker_options
-openshift_docker_use_system_container=true
+#openshift_docker_use_system_container=false
 # Force the registry to use for the system container. By default the registry
 # will be built off of the deployment type and ansible_distribution. Only
 # use this option if you are sure you know what you are doing!
