--- a/inventory/byo/hosts.cfg
+++ b/inventory/byo/hosts.cfg
@@ -294,7 +294,7 @@ openshift_master_cluster_public_hostname=openshift-bjb-public.lifesense.com
 #osm_api_server_args={'max-requests-inflight': ['400']}
 
 # default subdomain to use for exposed routes
-openshift_master_default_subdomain='${name}-${namespace}-openshift.lifesense.com'
+openshift_master_default_subdomain='app.openshift.lifesense.com'
 
 # additional cors origins
 #osm_custom_cors_origins=['foo.example.com', 'bar.example.com']
