--- a/inventory/byo/hosts.cfg
+++ b/inventory/byo/hosts.cfg
@@ -107,7 +107,7 @@ openshift_release=v3.6
 #openshift_docker_systemcontainer_image_registry_override="registry.example.com"
 # Items added, as is, to end of /etc/sysconfig/docker OPTIONS
 # Default value: "--log-driver=journald"
-#openshift_docker_options="-l warn --ipv6=false"
+openshift_docker_options="-l warn --ipv6=false --log-driver=journald --registry-mirror=http://b377ad59.m.daocloud.io -s overlay2"
 
 # Specify exact version of Docker to configure or upgrade to.
 # Downgrades are not supported and will error out. Be careful when upgrading docker from < 1.10 to > 1.10.
