--- a/inventory/byo/hosts.cfg
+++ b/inventory/byo/hosts.cfg
@@ -8,7 +8,7 @@ etcd
 
 # Set variables common for all OSEv3 hosts
 [OSEv3:vars]
-openshift_disable_check=disk_availability,memory_availability,docker_image_availability
+openshift_disable_check=disk_availability,memory_availability,docker_image_availability,docker_storage
 
 # Enable unsupported configurations, things that will yield a partially
 # functioning cluster but would not be supported for production use
@@ -107,7 +107,7 @@ openshift_release=v3.6
 #openshift_docker_systemcontainer_image_registry_override="registry.example.com"
 # Items added, as is, to end of /etc/sysconfig/docker OPTIONS
 # Default value: "--log-driver=journald"
-openshift_docker_options="-l warn --ipv6=false --log-driver=journald --registry-mirror=http://b377ad59.m.daocloud.io -s overlay2"
+openshift_docker_options="-l warn --ipv6=false --log-driver=journald --registry-mirror=http://b377ad59.m.daocloud.io"
 
 # Specify exact version of Docker to configure or upgrade to.
 # Downgrades are not supported and will error out. Be careful when upgrading docker from < 1.10 to > 1.10.
